first commit: complete settrack app

--- a/settrack/pubspec.yaml
+++ b/settrack/pubspec.yaml
@@ -31,12 +31,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-  firebase_core: ^4.4.0
-  firebase_auth: ^6.1.4
-  go_router: ^17.1.0
-  cloud_firestore: 6.1.2
-  intl: ^0.18.1
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.0
+  cloud_firestore: ^5.4.0
+  firebase_storage: ^12.3.0
+  image_picker: ^1.1.2
   fl_chart: ^0.66.0
+  intl: ^0.18.1
+  connectivity_plus: ^6.0.3
+
 
 
 
